--- a/testformating.html
+++ b/testformating.html
@@ -8,7 +8,7 @@
 <body>
     
     
-<font size="+2" color="00FF00">hello world</font>
+<!--<font size="+2" color="00FF00">hello world</font>
 
 <pre>test enclosed by pre tags</pre>
 <em>emphasis tag</em>
@@ -22,6 +22,26 @@
 
 entities
 
-<p>entity names or entity numbers can be used to display reserved HTML </p>
+<p>entity names or entity numbers can be used to display reserved HTML </p> -->
+
+<!---->>
+
+<!--<p><H1><b> Text Formatting Examples</b></H1></p>
+<p><h3><b>Bold test(using &lt;b&gt;)</b></h3></p>
+<p><strong>Important text(using &lt;strong&gt;)</strong></p>
+<p><I>Italic text(using &lt;i&gt;)</I></p>
+    <p><em>Emphasized test (using &lt;em&gt;)</em></p>
+<p><u>Underlined text(using &lt;u&gt;)</u></p>
+<mark> test (using &lt;mark&gt;) </mark>
+<small>Small text (using &lt;small&gt;)</small>
+<p>H<sub>2</sub>O</p>
+<p>x<sup>2</sup></p>
+<del>Deleted test(using &lt;del&gt;)</del>
+<p><ins>Inserted text (using&lt;ins&gt;)</ins></p>-->
+<p><h1><b>Special Characters & Entities</b></h1></p>
+Copyright &copy;2025 Mysite
+<br>Registered Trademark &reg;
+
+
 </body>
 </html>
